<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Silent Camera Widget</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_take_picture">Take a Picture</string>
    <string name="action_save">Save</string>
    <string name="action_label">Label</string>
    <string name="action_play">Play</string>
    <string name="hello_world_again">Hello world, again!</string>
	<string name="second">Go To Second Activity</string>
	<string name="second_activity_title">Second Activity</string>

</resources>
